Зелёные полоски. Часть 1.

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -240,54 +240,57 @@
         </ul>
       </section>
       <section class="catalog-additional">
+        <div class="catalog-additional__wrapper">
           <h2 class="catalog-additional__title text text--subtitle">Дополнительные товары</h2>
         </div>
-        <ul class="catalog-additional__list">
-          <li class="catalog-additional__item">
-            <h3 class="catalog-additional__item-title text text--bigger">Сахарозаменитель</h3>
-            <table class="catalog-additional__info">
-              <tr class="catalog-additional__row">
-                <td class="catalog-additional__cell catalog-additional__info-cell--property">1 Упаковка (100 г)</td>
-                <td class="catalog-additional__cell catalog-additional__info-cell--value">100 Р.</td>
-              </tr>
-            </table>
-            <a class="catalog-additional__button button text text--bigger" href="#">Заказать</a>
-          </li>
-          <li class="catalog-additional__item">
-            <h3 class="catalog-additional__item-title text text--bigger">Питьевая вода</h3>
-            <table class="catalog-additional__info">
-              <tr class="catalog-additional__row">
-                <td class="catalog-additional__cell catalog-additional__info-cell--property">5 литров</td>
-                <td class="catalog-additional__cell catalog-additional__info-cell--value">50 Р.</td>
-              </tr>
-            </table>
-            <a class="catalog-additional__button button text text--bigger" href="#">Заказать</a>
-          </li>
-          <li class="catalog-additional__item">
-            <h3 class="catalog-additional__item-title text text--bigger">Молоко</h3>
-            <table class="catalog-additional__info">
-              <tr class="catalog-additional__row">
-                <td class="catalog-additional__cell catalog-additional__info-cell--property">1 литр</td>
-                <td class="catalog-additional__cell catalog-additional__info-cell--value">100 Р.</td>
-              </tr>
-            </table>
-            <a class="catalog-additional__button button text text--bigger" href="#">Заказать</a>
-          </li>
-          <li class="catalog-additional__item">
-            <h3 class="catalog-additional__item-title text text--bigger">Витамины</h3>
-            <table class="catalog-additional__info">
-              <tr class="catalog-additional__row">
-                <td class="catalog-additional__cell catalog-additional__info-cell--property">1 Упаковка (30 г)</td>
-                <td class="catalog-additional__cell catalog-additional__info-cell--value">300 Р.</td>
-              </tr>
-            </table>
-            <a class="catalog-additional__button button text text--bigger" href="#">Заказать</a>
-          </li>
-        </ul>
-        <div class="catalog-additional__present present">
-          <div class="present-wrapper">
-            <h2 class="visually-hidden">Подарок</h2>
-            <p class="present__text">Закажите все и получите чехол для кота в подарок!</p>
+        <div class="catalog-additional__container">
+          <ul class="catalog-additional__list">
+            <li class="catalog-additional__item">
+              <h3 class="catalog-additional__item-title text text--bigger">Сахарозаменитель</h3>
+              <table class="catalog-additional__info">
+                <tr class="catalog-additional__row">
+                  <td class="catalog-additional__cell catalog-additional__info-cell--property">1 Упаковка (100 г)</td>
+                  <td class="catalog-additional__cell catalog-additional__info-cell--value">100 Р.</td>
+                </tr>
+              </table>
+              <a class="catalog-additional__button button text text--bigger" href="#">Заказать</a>
+            </li>
+            <li class="catalog-additional__item">
+              <h3 class="catalog-additional__item-title text text--bigger">Питьевая вода</h3>
+              <table class="catalog-additional__info">
+                <tr class="catalog-additional__row">
+                  <td class="catalog-additional__cell catalog-additional__info-cell--property">5 литров</td>
+                  <td class="catalog-additional__cell catalog-additional__info-cell--value">50 Р.</td>
+                </tr>
+              </table>
+              <a class="catalog-additional__button button text text--bigger" href="#">Заказать</a>
+            </li>
+            <li class="catalog-additional__item">
+              <h3 class="catalog-additional__item-title text text--bigger">Молоко</h3>
+              <table class="catalog-additional__info">
+                <tr class="catalog-additional__row">
+                  <td class="catalog-additional__cell catalog-additional__info-cell--property">1 литр</td>
+                  <td class="catalog-additional__cell catalog-additional__info-cell--value">100 Р.</td>
+                </tr>
+              </table>
+              <a class="catalog-additional__button button text text--bigger" href="#">Заказать</a>
+            </li>
+            <li class="catalog-additional__item">
+              <h3 class="catalog-additional__item-title text text--bigger">Витамины</h3>
+              <table class="catalog-additional__info">
+                <tr class="catalog-additional__row">
+                  <td class="catalog-additional__cell catalog-additional__info-cell--property">1 Упаковка (30 г)</td>
+                  <td class="catalog-additional__cell catalog-additional__info-cell--value">300 Р.</td>
+                </tr>
+              </table>
+              <a class="catalog-additional__button button text text--bigger" href="#">Заказать</a>
+            </li>
+          </ul>
+          <div class="catalog-additional__present present">
+            <div class="present-wrapper">
+              <h2 class="visually-hidden">Подарок</h2>
+              <p class="present__text">Закажите все и получите чехол для кота в подарок!</p>
+            </div>
           </div>
         </div>
       </section>
