--- a/source/form.html
+++ b/source/form.html
@@ -43,10 +43,10 @@
           <div class="form__container form__container--main">
             <h3 class="visually-hidden">Основная информация</h3>
             <div class="form__group form__group--main">
-              <label class="form__label text text--bigger">Имя:<sup>*</sup>
+              <label class="form__label text text--bigger">Имя:*
                 <input class="form__input form__input--name text text--bigger" type="text" name="name" placeholder="Барсик" required>
               </label>
-              <label class="form__label text text--bigger">Вес (кг):<sup>*</sup>
+              <label class="form__label text text--bigger">Вес (кг):*
                 <input class="form__input form__input--weight text text--bigger" type="number" name="weight" placeholder="7" required>
               </label>
               <label class="form__label text text--bigger">Возраст (лет):
@@ -82,10 +82,10 @@
             <h3 class="form__subtitle text text--subtitle">Контактные данные (владельца кота)</h3>
           </div>
           <div class="form__group form__group--contacts">
-            <label class="form__label text text--bigger">E-mail:<sup>*</sup>
+            <label class="form__label text text--bigger">E-mail:*
               <input class="form__input form__input--email text text--bigger" type="email" name="email" placeholder="kuklachev@gmail.com" required>
             </label>
-            <label class="form__label text text--bigger">Телефон:<sup>*</sup>
+            <label class="form__label text text--bigger">Телефон:*
               <input class="form__input form__input--phone text text--bigger" type="tel" name="phone" placeholder="8 (960) 900-60-90" required>
             </label>
           </div>
@@ -143,7 +143,7 @@
         </div>
         <div class="form__bottom">
           <button class="form__button button text text--bigger" type="submit" value="Отправить заявку">Отправить заявку</button>
-          <div class="form__required"><sup>*</sup> — Oбязательные поля</div>
+          <div class="form__required">* — Oбязательные поля</div>
         </div>
       </form>
     </main>
