--- a/source/index.html
+++ b/source/index.html
@@ -119,7 +119,7 @@
                 </picture>
               </div>
               <div class="before-after example__before-after">
-                <a class="before-after__text text text--bigger">Было</a>
+                <a class="before-after__text before-after__text--before text text--bigger">Было</a>
                 <div class="before-after__switch">
                   <a class="before-after__switch-wrapper">
                     <div class="before-after__switch-on"></div>
@@ -131,7 +131,7 @@
           </div>
         </section>
       </main>
-      <footer class="page-footer">
+      <footer class="page-footer page-footer--index">
         <div class="map page-footer__map">
           <h2 class="visually-hidden">Карта с адресом</h2>
           <div class="contacts page-footer__contacts">
