Кроссбраузерность, проверка по базовым критериям

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -64,14 +64,14 @@
       C5.7,3.9,3.9,5.7,3.9,8s1.8,4.1,4.1,4.1s4.1-1.8,4.1-4.1S10.3,3.9,8,3.9L8,3.9z"/>
       <circle cx="12.3" cy="3.7" r="0.9"/>
     </symbol>
-    <symbol viewBox="34.789 -4.709 13.518 27.75" id="fb-icon">
+    <symbol viewBox="0 0 10 19" id="fb-icon">
       <g>
         <path
-          d="M44.32,23.041h-6.816V10.137h-2.715V3.763h2.629c-0.202-2.887,0.298-5,1.519-6.444c1.039-1.229,2.583-1.911,4.588-2.026
-        l4.782-0.001v6.15h-3.755c-0.166,0.315-0.251,1.093-0.252,2.321h3.978v6.375H44.32V23.041z M39.004,21.541h3.816V8.637h3.957V5.263
-        h-3.953l-0.016-0.734c-0.044-2.04,0.002-3.784,1.007-4.46l0.19-0.127h2.801v-3.15h-3.239c-1.557,0.091-2.711,0.581-3.485,1.496
-        c-1.041,1.231-1.41,3.298-1.099,6.144l0.092,0.832h-2.786v3.375h2.715V21.541z"/>
+          d="M7.1,19H2v-8.8H0V5.8h1.9c-0.1-2,0.2-3.4,1.1-4.4C3.8,0.5,5,0.1,6.5,0L10,0v4.2H7.2C7.1,4.4,7,5,7,5.8H10v4.4H7.1V19z
+          M3.1,18h2.8V9.1h2.9V6.8H5.9l0-0.5c0-1.4,0-2.6,0.7-3.1l0.1-0.1h2.1V1H6.5c-1.2,0.1-2,0.4-2.6,1c-0.8,0.8-1,2.3-0.8,4.2l0.1,0.6
+          H1.1v2.3h2V18z"/>
       </g>
+    </symbol>
     <symbol viewBox="0 0 60 60" id="htmlacademy-icon">
       <path d="M30.2 5h-.2l-19.7 2.1v36.2l19.7 11.7 19.7-11.7v-36.2l-19.5-2.1zm17 36.8l-17.2 10.2-17.2-10.2v-14.8l17.1 10.2v1.8l-11.7-7v1.8l11.8 7.1v1.9l-11.8-7v1.8l11.8 7 11.9-7.1v-7.6l5.3-3.2v15.1zm-.1-17l-4.7 2.8-2.2 1.3-10.3-6.1v1.8l8.8 5.3h-.1l-.2.1-1.3.7-7.3-4.3v1.8l5.8 3.4-1.4.9-4.3-2.6v1.8l2.9 1.7-2.9 1.7-17-10.1 17-10.2 17.2 10zm.1-1.8l-17.3-10.2-17.1 10.2v-13.6l17.2-1.8 17.2 1.8v13.6z"/>
     </symbol>
@@ -155,13 +155,15 @@
         <ul class="catalog-main__list">
           <li class="catalog-main__item">
             <div class="catalog-main__item-wrapper">
-              <picture>
-                <source media="(min-width: 1300px)" srcset="img/catalog-chicken-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
-                <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
-                <img class="catalog-main__image" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg" alt="Фото продукта">
-              </picture>
+              <a href="catalog/product.html">
+                <picture>
+                  <source media="(min-width: 1300px)" srcset="img/catalog-chicken-desktop@1x.png 1x, img/chicken-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
+                  <img class="catalog-main__image" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg" alt="Фото продукта">
+                </picture>
+              </a>
               <div class="catalog-main__description">
-                <h3 class="catalog-main__item-title text text--bigger">Cat Energy PRO 500 г</h3>
+                <a class="catalog-main__item-title text text--bigger" href="catalog/product.html">Cat Energy PRO 500 г</a>
                 <table class="catalog-main__info" border="0">
                   <tr class="catalog-main__info-row">
                     <td class="catalog-main__info-cell catalog-main__info-cell--property">Объём</td>
@@ -182,13 +184,15 @@
           </li>
           <li class="catalog-main__item">
             <div class="catalog-main__item-wrapper">
-              <picture>
-                <source media="(min-width: 1300px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
-                <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
-                <img class="catalog-main__image catalog-main__image--big" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg" alt="Фото продукта">
-              </picture>
+              <a href="catalog/product.html">
+                <picture>
+                  <source media="(min-width: 1300px)" srcset="img/chicken-big-desktop@1x.png 1x, img/chicken-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png 1x, img/chicken-big-tablet@2x.png 2x">
+                  <img class="catalog-main__image catalog-main__image--big" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg" alt="Фото продукта">
+                </picture>
+              </a>
               <div class="catalog-main__description">
-                <h3 class="catalog-main__item-title text text--bigger">Cat Energy PRO 1000 г</h3>
+                <a class="catalog-main__item-title text text--bigger" href="catalog/product.html">Cat Energy PRO 1000 г</a>
                 <table class="catalog-main__info">
                   <tr class="catalog-main__info-row">
                     <td class="catalog-main__info-cell catalog-main__info-cell--property">Объём</td>
@@ -209,13 +213,15 @@
           </li>
           <li class="catalog-main__item">
             <div class="catalog-main__item-wrapper">
-              <picture>
-                <source media="(min-width: 1300px)" srcset="img/fish-small-desktop@2x.png 1x, img/chicken-small-desktop@2x.png 2x">
-                <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
-                <img class="catalog-main__image" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg" alt="Фото продукта">
-              </picture>
+              <a href="catalog/product.html">
+                <picture>
+                  <source media="(min-width: 1300px)" srcset="img/fish-small-desktop@2x.png 1x, img/chicken-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png 1x, img/chicken-small-tablet@2x.png 2x">
+                  <img class="catalog-main__image" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg" alt="Фото продукта">
+                </picture>
+              </a>
               <div class="catalog-main__description">
-                <h3 class="catalog-main__item-title text text--bigger">Cat Energy PRO 500 г</h3>
+                <a class="catalog-main__item-title text text--bigger" href="catalog/product.html">Cat Energy PRO 500 г</a>
                 <table class="catalog-main__info">
                   <tr class="catalog-main__info-row">
                     <td class="catalog-main__info-cell catalog-main__info-cell--property">Объём</td>
@@ -236,13 +242,15 @@
           </li>
           <li class="catalog-main__item">
             <div class="catalog-main__item-wrapper">
-              <picture>
-                <source media="(min-width: 1300px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
-                <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
-                <img class="catalog-main__image catalog-main__image--big" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg" alt="Фото продукта">
-              </picture>
+              <a href="catalog/product.html">
+                <picture>
+                  <source media="(min-width: 1300px)" srcset="img/fish-big-desktop@1x.png 1x, img/fish-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png 1x, img/fish-big-tablet@2x.png 2x">
+                  <img class="catalog-main__image catalog-main__image--big" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg" alt="Фото продукта">
+                </picture>
+              </a>
               <div class="catalog-main__description">
-                <h3 class="catalog-main__item-title text text--bigger">Cat Energy PRO 1000 г</h3>
+                <a class="catalog-main__item-title text text--bigger" href="catalog/product.html">Cat Energy PRO 1000 г</a>
                 <table class="catalog-main__info">
                   <tr class="catalog-main__info-row">
                     <td class="catalog-main__info-cell catalog-main__info-cell--property">Объём</td>
@@ -263,13 +271,15 @@
           </li>
           <li class="catalog-main__item">
             <div class="catalog-main__item-wrapper">
-              <picture>
-                <source media="(min-width: 1300px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
-                <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
-                <img class="catalog-main__image" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg" alt="Фото продукта">
-              </picture>
+              <a href="catalog/product.html">
+                <picture>
+                  <source media="(min-width: 1300px)" srcset="img/buckwheat-small-desktop@1x.png 1x, img/buckwheat-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png 1x, img/buckwheat-small-tablet@2x.png 2x">
+                  <img class="catalog-main__image" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg" alt="Фото продукта">
+                </picture>
+              </a>
               <div class="catalog-main__description">
-                <h3 class="catalog-main__item-title text text--bigger">Cat Energy SLIM 500 г</h3>
+                <a class="catalog-main__item-title text text--bigger" href="catalog/product.html">Cat Energy SLIM 500 г</a>
                 <table class="catalog-main__info">
                   <tr class="catalog-main__info-row">
                     <td class="catalog-main__info-cell catalog-main__info-cell--property">Объём</td>
@@ -290,13 +300,15 @@
           </li>
           <li class="catalog-main__item">
             <div class="catalog-main__item-wrapper">
-              <picture>
-                <source media="(min-width: 1300px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
-                <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
-                <img class="catalog-main__image catalog-main__image--big" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg" alt="Фото продукта">
-              </picture>
+              <a href="catalog/product.html">
+                <picture>
+                  <source media="(min-width: 1300px)" srcset="img/buckwheat-big-desktop@1x.png 1x, img/buckwheat-big-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png 1x, img/buckwheat-big-tablet@2x.png 2x">
+                  <img class="catalog-main__image catalog-main__image--big" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg" alt="Фото продукта">
+                </picture>
+              </a>
               <div class="catalog-main__description">
-                <h3 class="catalog-main__item-title text text--bigger">Cat Energy SLIM 1000 г</h3>
+                <a class="catalog-main__item-title text text--bigger" href="catalog/product.html">Cat Energy SLIM 1000 г</a>
                 <table class="catalog-main__info">
                   <tr class="catalog-main__info-row">
                     <td class="catalog-main__info-cell catalog-main__info-cell--property">Объём</td>
@@ -317,13 +329,15 @@
           </li>
           <li class="catalog-main__item">
             <div class="catalog-main__item-wrapper">
-              <picture>
-                <source media="(min-width: 1300px)" srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
-                <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
-                <img class="catalog-main__image" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg" alt="Фото продукта">
-              </picture>
+              <a href="catalog/product.html">
+                <picture>
+                  <source media="(min-width: 1300px)" srcset="img/rice-small-desktop@1x.png 1x, img/rice-small-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png 1x, img/rice-small-tablet@2x.png 2x">
+                  <img class="catalog-main__image" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg" alt="Фото продукта">
+                </picture>
+              </a>
               <div class="catalog-main__description">
-                <h3 class="catalog-main__item-title text text--bigger">Cat Energy SLIM 500 г</h3>
+                <a class="catalog-main__item-title text text--bigger" href="catalog/product.html">Cat Energy SLIM 500 г</a>
                 <table class="catalog-main__info">
                   <tr class="catalog-main__info-row">
                     <td class="catalog-main__info-cell catalog-main__info-cell--property">Объём</td>
