--- a/source/form.html
+++ b/source/form.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Подбор программы от Cat Energy</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="preload" href="fonts/Oswald.woff2" as="font">
+    <link rel="preload" href="fonts/Oswald Medium.woff2" as="font">
     <link href="css/style.css" rel="stylesheet">
     <script>
       document.createElement( "picture" );
