--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
     <title>Cat Energy</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="preload" href="fonts/Oswald.woff2" as="font">
-    <link rel="preload" href="fonts/Oswald Medium.woff2" as="font">
+    <link rel="preload" href="fonts/Oswald-Medium.woff2" as="font">
     <link href="css/style.css" rel="stylesheet">
     <script>
       document.createElement( "picture" );
